# Suoh

./: ..gitignore.un~  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Source/Core/: CMakeLists.txt
Source/Core/Core/: Containers.h  File.h  Logger.cpp  Logger.h  ResourcePool.h  SystemCommand.cpp  SystemCommand.h  Types.h
Source/Suoh/: CMakeLists.txt  main.cpp
Source/Suoh/Application/: Window.cpp  Window.h
Source/Suoh/Graphics/: GPUStates.cpp  GPUStates.h
Source/Suoh/Graphics/SPIRV/: SPIRVParser.cpp  SPIRVParser.h  ShaderCompiler.cpp  ShaderCompiler.h
Source/Suoh/Graphics/Vulkan/: GPUConstants.h  GPUProfiler.cpp  GPUProfiler.h  GPUResource.h  VulkanBarriers.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommon.h  VulkanDescriptorSets.cpp  VulkanDescriptorSets.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanResourceDescriptors.h  VulkanResources.cpp  VulkanResources.h  VulkanShaderState.cpp  VulkanShaderState.h  VulkanState.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp  VulkanUtils.h
Suoh/: CMakeLists.txt
Suoh/Application/: Application.cpp  Application.h  CMakeLists.txt  Profiler.h  main.cpp
Suoh/Application/Application/: Application.cpp  Application.h  Profiler.h  main.cpp
Suoh/Application/Application/Rendering/: Camera.cpp  Camera.h  FramesPerSecondCounter.cpp  FramesPerSecondCounter.h  MainRenderer.cpp  MainRenderer.h  MultiRenderer.cpp  MultiRenderer.h  Renderer.h  SceneRenderer.h
Suoh/Application/Rendering/: Camera.cpp  Camera.h  FramesPerSecondCounter.cpp  MainRenderer.cpp  MainRenderer.h  RenderDevice.cpp  RenderDevice.h  RenderUtils.cpp  RenderUtils.h  SceneData.cpp  SceneData.h  SceneRenderer.cpp  SceneRenderer.h
Suoh/Application/Rendering/Renderers/: ClearRenderer.cpp  ClearRenderer.h  CubeRenderer.h  GuiRenderer.cpp  GuiRenderer.h  ModelRenderer.cpp  RendererBase.cpp  RendererBase.h
Suoh/Application/Window/: Window.cpp  Window.h
Suoh/Core/: Asserts.h  CMakeLists.txt  CoreMaths.h  CoreTypes.h  CoreUtils.h  Logger.cpp  Logger.h  PlatformDefines.h  SuohBase.h  Window.h
Suoh/Core/Core/: Logger.cpp  Logger.h  Math.h  Utils.h  argh.h
Suoh/Graphics/: CMakeLists.txt
Suoh/Graphics/Graphics/Scene/: Material.cpp  Material.h  SaveUtils.cpp  SaveUtils.h  Scene.cpp  Scene.h  VertexData.cpp  VertexData.h
Suoh/Graphics/Graphics/Window/: Window.cpp  Window.h
Suoh/MeshConvert/: CMakeLists.txt
Suoh/MeshConvert/MeshConvert/: MeshConvert.cpp  MeshConvert.h  argh.h  main.cpp
Suoh/Platform/: CMakeLists.txt
Suoh/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Suoh/RHI/: CMakeLists.txt
Suoh/RHI/Private/: CommandListStateTracker.cpp  CommandListStateTracker.h  RHIMisc.cpp  RHIVersioning.h
Suoh/RHI/Private/Vulkan/: VulkanBindings.cpp  VulkanBindings.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceManager.cpp  VulkanDeviceManager.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanInstance.cpp  VulkanInstance.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRHI.cpp  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUploadManager.cpp  VulkanUploadManager.h  VulkanUtils.cpp  VulkanUtils.h
Suoh/RHI/Public/: RHI.h  RHICommon.h  RHIContainers.h  RHIRenderStates.h  RHIResources.h  VulkanRHI.h
Suoh/RenderCore/: CMakeLists.txt
Suoh/RenderCore/RenderCore/: RenderCore.cpp  RenderCore.h  RenderStates.h
Suoh/RenderCore/RenderCore/Common/: RenderResources.h
Suoh/RenderCore/RenderCore/Vulkan/: VulkanBindings.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUploadManager.cpp  VulkanUploadManager.h  VulkanUtils.cpp  VulkanUtils.h
Suoh/RenderDescription/: CMakeLists.txt
Suoh/RenderDescription/RenderDescription/: BoundingBox.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Utils.cpp  Utils.h
Suoh/RenderLib/: CMakeLists.txt
Suoh/RenderLib/RenderLib/: RenderLib.cpp  RenderLib.h  RenderStates.h
Suoh/RenderLib/Window/: Window.cpp  Window.h
Suoh/SceneConvert/: CMakeLists.txt
Suoh/SceneConvert/SceneConvert/: SceneConvert.cpp  SceneConvert.h  main.cpp
Suoh/SceneConverter/: CMakeLists.txt  main.cpp
Suoh/Shaders/: Cube.frag.spv  Cube.vert  Cube.vert.spv  Imgui.frag  Imgui.frag.spv  Imgui.vert.spv  Lines.frag  MultiMesh.frag  MultiMesh.frag.spv  MultiMesh.vert  MultiMesh.vert.spv  Quad.frag  Quad.vert  Simple.frag  Simple.vert  Simple.vert.spv  TextureArray.frag  TextureArray.frag.spv  TextureArray.vert  TextureArray.vert.spv
Suoh/Shaders/Compute/: BRDF_LUT.comp  IndustrialComplexTexture.comp
Suoh/Shaders/PBR/: PBR_Mesh.frag  PBR_Mesh.frag.spv  PBR_Mesh.vert  PBR_Mesh.vert.spv
Suou/: CMakeLists.txt
Suou/Application/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  suoupch.h
Suou/Application/Rendering/: FinishRenderer.cpp  FinishRenderer.h  MainRenderer.cpp  MainRenderer.h  ModelRenderer.cpp  ModelRenderer.h  RendererBase.cpp
Suou/Client/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
Suou/Core/: Asserts.h  CMakeLists.txt  CoreTypes.h  Logger.cpp  Logger.h  PlatformDefines.h  StrongTypedef.h  SuouBase.h  Window.h
Suou/Graphics/: CMakeLists.txt
Suou/Graphics/RenderLib/: CommandBuffer.h  RenderDevice.h
Suou/Graphics/Renderer/: CommandBuffer.h  RenderDevice.h  RenderStates.h
Suou/Platform/: CMakeLists.txt
Suou/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Suou/RenderLib/: CMakeLists.txt
Suou/RenderLib/RenderLib/: RenderDevice.h
Suou/Shaders/: Imgui.vert  Lines.frag.spv  Lines.vert  Lines.vert.spv  Simple.frag  Simple.frag.spv  Simple.geom  Simple.geom.spv  Simple.vert
(+130 files in other folders)
